src/test/ui/mir/issue-75053.min_tait.stderr
error[E0658]: type alias impl trait is not permitted here
  --> $DIR/issue-75053.rs:53:15
   |
LL |     let _pos: Phantom1<DummyT<()>> = Scope::new().my_index();
   |               ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #63065 <https://github.com/rust-lang/rust/issues/63065> for more information
   = help: add `#![feature(impl_trait_in_bindings)]` to the crate attributes to enable

error: type aliases of `impl Trait` are not allowed as field types in structs
  --> $DIR/issue-75053.rs:28:1
   |
LL | type DummyT<T> = impl F;
   | ------------------------ type alias defined here
...
LL | struct Scope<T>(Phantom2<DummyT<T>>);
   | ^^^^^^^^^^^^^^^^-------------------^^
   |                 |        |
   |                 |        this type is a type alias of an `impl Trait`
   |                 this field contains a type alias `DummyT` of an `impl Trait`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
